--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@ layout: default
     <form>
       <textarea id="cleaning" cols="80" rows="30"></textarea>
       <p>
-        <input type="button" id="cleanWord" value="Clean Word HTML script" onclick="CleanWordHTML(document.getElementById('cleaning').value)"><br>
+        <input type="button" id="cleanWord" value="Clean Word HTML script" onclick="CleanWordHTML(document.getElementById('cleaning').value)">
+      </p>
+      <p>
         <input type="button" id="cleanPaste" value="Clean Paste script" onclick="cleanPaste(document.getElementById('cleaning').value)">
       </p>
     <script src="MSWordHtmlCleaners.js"></script>
