--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ layout: default
         <input type="button" id="cleanWord" value="Clean Word HTML script" onclick="CleanWordHTML(document.getElementById('cleaning').value)">
       </p>
       <p>
-        <input type="button" id="cleanPaste" value="Clean HTML script" onclick="cleanHTML(document.getElementById('cleaning').value)">
+        <input type="button" id="cleanHTML" value="Clean HTML script" onclick="cleanHTML(document.getElementById('cleaning').value)">
       </p>
     <script src="MSWordHtmlCleaners.js"></script>
   </body>
