--- a/index.html
+++ b/index.html
@@ -8,15 +8,10 @@ layout: default
   </head>
   <body>
     <h1>Clean up Word HTML</h1>
-    <p>Paste here.</p>
-    <form>
-      <textarea id="cleaning" cols="80" rows="30"></textarea>
-      <p>
-        <input type="button" id="cleanWord" value="Clean Word HTML script" onclick="CleanWordHTML(document.getElementById('cleaning').value)">
-      </p>
-      <p>
-        <input type="button" id="cleanHTMLbutton" value="Clean HTML script" onclick="cleanHTML(document.getElementById('cleaning').value)">
-      </p>
-    <script src="MSWordHtmlCleaners.js"></script>
+    <ul>
+      <li><p><a href="version02.html">Using Vue and jQuery</a></p></li>
+      <li><p><a href="version01.html">Earlier experiments</a></p></li>    
+    </ul>
+     
   </body>
 </html>
