--- a/index.html
+++ b/index.html
@@ -1,17 +1,46 @@
----
-layout: default
----
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Clean up Word HTML</title>
+    <title>Clean up Word HTML - Vue and jQuery</title> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.css">
+    <link rel="stylesheet" href="version02.css">
   </head>
   <body>
     <h1>Clean up Word HTML</h1>
-    <ul>
-      <li><p><a href="version02.html">Using Vue and jQuery</a></p></li>
-      <li><p><a href="version01.html">Earlier experiments</a></p></li>    
-    </ul>
-     
+    <h2>Dependencies: Vue, jQuery</h2>
+    <div id="app">
+  <div class="input-area">
+    <textarea v-model="input"
+              @paste="handlePaste"
+              class="text-area"
+              rows="20"
+              placeholder="Paste your word text here ...">
+    </textarea>
+    <div class="editor">
+      <div class="controls">
+         <label>Block Tag:</label>
+         <select class="form-control form-control-sm"
+                 v-model="selectedTag">
+           <option v-for="tag in tags">
+             {{ tag }}
+           </option>
+         </select>
+         <span class="description">
+           Click on element to convert it to selected tag.
+         </span>
+      </div>
+      <div ref="preview"
+           class="preview"
+           v-html="input"
+           @click="handleClick"></div>
+    </div>
+  </div>
+</div>
+
+    <p>Adapted from work by Jörg Bayreuther, https://codepen.io/mediadivisiongmbh, code at https://codepen.io/mediadivisiongmbh/pen/ERxywZ</p>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.13/vue.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sanitize-html@1.18.2/dist/sanitize-html.min.js"></script>    
+    <script src="MSWordHtmlCleaners02.js"></script>
   </body>
 </html>
