--- a/version01.html
+++ b/version01.html
@@ -18,8 +18,8 @@ layout: default
         <input type="button" id="cleanHTMLbutton" value="Clean HTML script" onclick="cleanHTML(document.getElementById('cleaning').value)">
       </p>
       <p>
-        This page used various experiments from the <em>MSWordHtmlCleaners.js</em> script in this repo.
+        This page used various experiments from the <em>version01-MSWordHtmlCleaners.js</em> script in this repo.
       </p>
-    <script src="MSWordHtmlCleaners.js"></script>
+    <script src="version01-MSWordHtmlCleaners.js"></script>
   </body>
 </html>
