--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
            </option>
          </select>
          <span class="description">
-           Click on element to convert it to selected tag.
+           Click on an area of text on the left, to convert it to selected HTML tag.
          </span>
       </div>
       <div ref="preview"
