--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Clean up Word HTML - Vue and jQuery</title> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.css">
-    <link rel="stylesheet" href="version02.css">
+    <link rel="stylesheet" href="ms-word-cleanup.css">
   </head>
   <body>
     <h1>Clean up Word HTML</h1>
